ko_tests/diff_roc/slurm-231530.out
  File "/home/schaferd/ae_project/Modular_DSCA_TF_Prediction/ko_tests/diff_roc/ko_data_processing.py", line 40
    break
    ^
SyntaxError: 'break' outside loop
